--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.changeMe{
+	color: rgba(0,0,0,0);
+
+	input{
+		color:black;
+		border-style:none;
+		border-bottom-style:solid;
+		border-bottom-color:black;
+		border-bottom-width:2px;
+
+
+		}
+
+}
