--- a/app/assets/stylesheets/mad_quotes.scss
+++ b/app/assets/stylesheets/mad_quotes.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the MadQuotes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.changeMe{
+	color: rgba(0,0,0,0);
+
+	input{
+		color:black;
+		border-style:solid;
+		border-color:black;
+		border-width:2px;
+		border-radius:5px;
+		margin:3px;
+		text-align: center;
+		width:200px;
+		height:50px;
+		font-size: 20px;
+	}
+
+}
