--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,12 +7,15 @@
 
 	input{
 		color:black;
-		border-style:none;
-		border-bottom-style:solid;
-		border-bottom-color:black;
-		border-bottom-width:2px;
-
-
-		}
+		border-style:solid;
+		border-color:black;
+		border-width:2px;
+		border-radius:5px;
+		margin:3px;
+		text-align: center;
+		width:200px;
+		height:50px;
+		font-size: 20px;
+	}
 
 }
