--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Backreact</title>
-  <%= stylesheet_link_tag 'application', media: 'all' %>
-  <%= csrf_meta_tags %>
+	<title>Backreact</title>
+	<%= stylesheet_link_tag 'application', media: 'all' %>
+	<%= csrf_meta_tags %>
+	<script src="//use.typekit.net/tdv2arw.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
-  <div id='container'>
+	<header>
+		<h1>RADLIBS</h1>
+	</header>
 
-  </div>
-  <%= javascript_include_tag 'application' %>
+	<div id='container'>
+
+	</div>
+
+	<footer>
+		<p>Built by Joshua, Ben and Casie</p>
+	</footer>
+	<%= javascript_include_tag 'application' %>
 </body>
 </html>
