--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -145,6 +145,9 @@ $box-width: 90%;
 	font-size: 16px;
 	font-size: 1rem;
 }
+.login-page{
+	display: none;
+}
 
 // CREATE SECTION -------------------------------------
 
