--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,311 +1,6 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-body {
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-body {
-  font-family: signo, sans-serif;
-  font-size: 16px;
-  font-size: 1rem;
-  line-height: 1.6;
-  font-weight: 400;
-  font-style: normal;
-  color: #000000; }
-
-h1 {
-  font-family: azo-sans-uber, sans-serif;
-  font-size: 72px;
-  font-size: 4.5rem;
-  line-height: 1.3;
-  font-weight: 400;
-  font-style: normal;
-  color: white;
-  padding: 100px 0;
-  text-align: center; }
-
-h2 {
-  font-size: 36px;
-  font-size: 2.25rem;
-  line-height: 1.4; }
-
-h3 {
-  font-size: 20px;
-  font-size: 1.5rem;
-  line-height: 1.4; }
-
-h4 {
-  font-size: 18px;
-  font-size: 1.125rem;
-  color: #000000; }
-
-.noun,
-.adjective,
-.verb,
-.adverb {
-  font-weight: bold;
-  font-style: italic; }
-
-.noun {
-  color: #006CB0; }
-
-.adjective {
-  color: #00C41F; }
-
-.verb {
-  color: #FF0060; }
-
-.adverb {
-  color: #FBFB00; }
-
-html {
-  box-sizing: border-box; }
-
-*, *:before, *:after {
-  box-sizing: inherit; }
-
-header {
-  width: 100%;
-  background: #000000;
-  overflow: hidden; }
-
-.quote-previews {
-  overflow: hidden;
-  margin: 0 auto; }
-
-.sample-quote {
-  width: 100%;
-  margin-right: 2%;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  float: left;
-  background: white;
-  background: white;
-  padding: 20px; }
-  .sample-quote h3, .sample-quote p {
-    padding-left: 40px;
-    padding-right: 40px; }
-  .sample-quote h3 {
-    padding-top: 40px; }
-  .sample-quote p {
-    padding-top: 20px; }
-
-.original-quote {
-  width: 100%;
-  margin-right: 2%;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  float: left;
-  background: white;
-  background: #006CB0;
-  color: white;
-  padding: 40px; }
-  .original-quote h3, .original-quote p {
-    font-weight: 200; }
-  .original-quote h3:nth-of-type(2) {
-    font-style: italic; }
-
-.center {
-  max-width: 300px;
-  margin: 0 auto; }
-
-.color-box {
-  min-height: 200px;
-  width: 90%;
-  max-width: 350px;
-  margin: 10px auto;
-  position: relative; }
-  .color-box .top {
-    width: 100%;
-    height: 30px;
-    background: rgba(251, 251, 0, 0.5);
-    border-radius: 0 0 30px 30px;
-    position: absolute;
-    top: 0; }
-  .color-box .right {
-    width: 30px;
-    height: 100%;
-    background: rgba(255, 0, 96, 0.5);
-    border-radius: 30px 0 0 30px;
-    position: absolute;
-    right: 0; }
-  .color-box .bottom {
-    width: 100%;
-    height: 30px;
-    background: rgba(0, 108, 176, 0.5);
-    border-radius: 30px 30px 0 0;
-    position: absolute;
-    bottom: 0; }
-  .color-box .left {
-    width: 30px;
-    height: 100%;
-    background: rgba(0, 196, 31, 0.5);
-    border-radius: 0 30px 30px 0;
-    position: absolute;
-    left: 0; }
-
-.start {
-  overflow: hidden;
-  width: 100%;
-  margin-right: 2%;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  float: left;
-  background: white; }
-  .start label {
-    display: block;
-    padding-top: 10px; }
-
-.wrapper h4 {
-  padding: 20px 10px 20px 0;
-  display: inline-block; }
-.wrapper label {
-  display: inline-block; }
-
-.btn {
-  color: white;
-  text-align: center;
-  border: 0;
-  border-radius: 5px;
-  padding: 5px; }
-
-.create-button {
-  background: #006CB0;
-  font-size: 18px;
-  font-size: 1.125rem;
-  display: block; }
-
-.login-button, .signup-button {
-  background: #FF0060;
-  font-size: 16px;
-  font-size: 1rem; }
-
-.create {
-  width: 100%;
-  margin-right: 2%;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  float: left;
-  background: white;
-  overflow: hidden; }
-
-.directions {
-  background: #006CB0;
-  color: white;
-  padding: 40px; }
-
-.word-input label {
-  display: block; }
-
-footer {
-  width: 100%;
-  background: #000000;
-  color: white;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  clear: left; }
-  footer p {
-    text-align: center; }
-
-@media screen and (min-width: 700px) {
-  .quote-previews {
-    max-width: 1000px; }
-
-  .sample-quote {
-    width: 59.2%;
-    margin-right: 2%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    float: left;
-    background: white;
-    float: left;
-    margin-right: 0;
-    padding: 30px; }
-
-  .original-quote {
-    width: 38.8%;
-    margin-right: 2%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    float: left;
-    background: white;
-    min-height: 280px;
-    float: right;
-    margin-right: 0;
-    overflow: hidden;
-    z-index: 1;
-    background: #006CB0;
-    padding: 50px; }
-
-  .start {
-    background: rgba(0, 196, 31, 0.8);
-    max-width: 1000px;
-    margin: 0 auto;
-    clear: left;
-    float: none;
-    color: white; }
-    .start h4 {
-      color: white; } }
-
-      .changeMe{
-	color: rgba(0,0,0,0);
-
-	input{
-		color:black;
-		border-style:solid;
-		border-color:black;
-		border-width:2px;
-		border-radius:5px;
-		margin:3px;
-		width:200px;
-		height:50px;
-		font-size: 20px;
-	}
-
-}
-.logi-page{
-	display: none;
-}
-
-/*# sourceMappingURL=style.css.map */
+@import 'reset';
+@import 'colors';
+@import 'type';
+@import 'layout';
+@import 'global';
+@import 'media1';
