changed title on app.html.erb to radlibs from backreact

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Backreact</title>
+	<title>RadLibs</title>
 	<%= stylesheet_link_tag 'application', media: 'all' %>
 	<%= csrf_meta_tags %>
 	<script src="//use.typekit.net/tdv2arw.js"></script>
