updated button styling

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,7 +1,12 @@
 $blue: #006CB0;
+$dkblue: #2B78AB;
+$ltblue: #62A8d1;
 $green: #00C41F;
+$ltgreen: #05F028;
 $yellow: #FBFB00;
+$ltyellow: #FAFA46;
 $pink: #FF0060;
+$ltpink: #FA448A;
 $black: #000000;
 
 $tblue: rgba(0, 108, 176, 0.5);
@@ -13,4 +18,5 @@ $styellow: rgba(251, 251, 0, 0.1);
 $stpink: rgba(255, 0, 96, 0.3);
 
 $tsgreen: rgba(0, 196, 31, 0.8);
+
 
