--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -26,3 +26,11 @@ $col: 8.2%;
 	background: white;
 }
 
+@mixin gradient($top, $bottom) {
+	background-image: -webkit-linear-gradient(top, $top, $bottom);
+	background-image: 	 -moz-linear-gradient(top, $top, $bottom);
+	background-image: 	  -ms-linear-gradient(top, $top, $bottom);
+	background-image: 	   -o-linear-gradient(top, $top, $bottom);
+	background-image: 		  linear-gradient(to bottom, $top, $bottom);
+}
+
