--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -181,10 +181,11 @@ footer {
 	}
 }
 
-.changeMe{
-	color: rgba(0,0,0,0);
-
-	input{
+.newQuotePage{
+	display:none;
+}
+.startQuote{
+		input{
 		color:black;
 		border-style:solid;
 		border-color:black;
@@ -195,6 +196,4 @@ footer {
 		height:50px;
 		font-size: 20px;
 	}
-
 }
-
