updated logout button

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -168,7 +168,7 @@ form input {
 	display: block;
 }
 
-.login-button, .signup-button {
+.login-button, .signup-button, .logout-button {
 	background: $pink;
 	@include gradient ($ltpink, $pink);
 	font-size: 16px;
@@ -243,6 +243,17 @@ form input {
 
 .startQuote {
 	background: $blue;
+}
+
+// LOGOUT -----------------------------------------
+
+.logout-box {
+	background: $yellow;
+	text-align: right;
+
+	button {
+		margin: 20px;
+	}
 }
 
 // FOOTER ------------------------------------------
