upated submit button coloring in media1

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -175,6 +175,11 @@ form input {
 	font-size: 1rem;
 }
 
+.logout-button {
+	font-size: 14px;
+	font-size: 0.875rem;
+}
+
 .login-page{
 	display: none;
 }
