added hyperlinks in the footer

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -275,5 +275,13 @@ footer {
 	p {
 		text-align: center;
 	}
+
+	a{
+		color: white;
+		text-decoration: none;
+	}
+	a:hover{
+		text-decoration: underline;
+	}
 }
 
