added transitions to reg/log

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -115,6 +115,7 @@ $box-width: 90%;
 	overflow: hidden;
 	padding-top: 40px;
 	padding-bottom: 40px;
+	transition: background ease 1s;
 	@include grid(10);
 	label {
 		display: block;
