--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -122,6 +122,7 @@ $box-width: 90%;
 
 .start {
 	overflow: hidden;
+	height: 555px;
 	padding-top: 40px;
 	padding-bottom: 40px;
 	transition: background ease 1s;
@@ -150,6 +151,11 @@ form input {
 	font-size: 1rem;
 	margin: 0.875rem;
 	padding: 0.5rem;
+
+	&:focus {
+		outline: 0;
+		border: 1px solid $blue;
+	}
 }
 
 .btn {
