added some quote features

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -270,6 +270,7 @@ form input {
 // CREATE AGAIN/INSPIRE -----------------------------------------
 
 .inspire-box {
+	display: none;
 	padding-bottom: 40px;
 
 	.inspire {
@@ -318,4 +319,5 @@ footer {
 		text-decoration: underline;
 	}
 }
+
 
