--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 	</div>
 
 	<footer>
-		<p>Built by <a href="https://twitter.com/jlagrange87" target="_blank">Joshua Lagrange</a>, <a href="https://github.com/BenHand" target="_blank">Ben Hand</a>, and <a href="https://twitter.com/casczap" target="_blank">Casie Czapski</a></p>
+		<p>Created by <a href="https://twitter.com/jlagrange87" target="_blank">Joshua Lagrange</a>, <a href="https://github.com/BenHand" target="_blank">Ben Hand</a>, and <a href="https://twitter.com/casczap" target="_blank">Casie Czapski</a></p>
 	</footer>
 	<%= javascript_include_tag 'application' %>
 </body>
