--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -13,7 +13,7 @@ header {
 	margin: 0 auto;
 }
 
-.sample-quote {
+.fun-quote {
 	@include grid(10);
 	font-style: italic;
 	background: white;
@@ -154,7 +154,8 @@ form input {
 
 	&:focus {
 		outline: 0;
-		border: 1px solid $blue;
+		border: 0;
+		@include shadow($yellow);
 	}
 }
 
