--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,11 @@
 	<%= csrf_meta_tags %>
 	<script src="//use.typekit.net/tdv2arw.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
+	<link rel="icon" type="image/png" href="http://i.imgur.com/mrpdz5W.png"/>
 </head>
 <body>
 	<header>
-		<h1>RADLIBS</h1>
+		<h1><img src="http://i.imgur.com/mrpdz5W.png" style="max-width: 70px;"/> RADLIBS</h1>
 	</header>
 
 	<div id='container'>
