--- a/app/assets/stylesheets/_media1.scss
+++ b/app/assets/stylesheets/_media1.scss
@@ -46,6 +46,12 @@ form input {
 	}
 }
 
+.create {
+	max-width: 1000px;
+	margin: 0 auto;
+	float: none;
+}
+
 .create-button {
 	background: $blue;
 	@include gradient($ltblue, $blue);
@@ -59,6 +65,34 @@ form input {
 .word-input .create-button {
 	background: $green;
 	@include gradient($ltgreen, $green);
+}
+
+// CREATE AGAIN/INSPIRE -----------------------------------------
+
+.inspire-background {
+	background: white;
+	clear: both;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	max-width: 1000px;
+	margin: 0 auto;
+}
+
+.inspire-box {
+	background: $green;
+	padding: 0;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	width: 60%;
+	margin: 0 auto;
+
+	.inspire {
+		padding-bottom: 20px;
+		font-size: 18px;
+		font-size: 1.125rem;
+		color: white;
+
+	}	
 }
 
 
