--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 	<script src="//use.typekit.net/tdv2arw.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
 	<link rel="icon" type="image/png" href="http://i.imgur.com/mrpdz5W.png"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header>
