--- a/app/assets/stylesheets/_media1.scss
+++ b/app/assets/stylesheets/_media1.scss
@@ -95,5 +95,15 @@ form input {
 	}	
 }
 
+// LOGOUT -----------------------------------------
+
+.logout-box {
+	max-width: 1000px;
+	margin: 0 auto;
+
+	button {
+		margin: 20px;
+	}
+}
 
 } //end of media query
