--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>RadLibs</title>
+	<title>RADLIBS</title>
 	<%= stylesheet_link_tag 'application', media: 'all' %>
 	<%= csrf_meta_tags %>
 	<script src="//use.typekit.net/tdv2arw.js"></script>
@@ -10,7 +10,10 @@
 </head>
 <body>
 	<header>
-		<h1><img src="http://i.imgur.com/mrpdz5W.png" style="max-width: 70px;"/> RADLIBS</h1>
+		<div class="logo-header">
+			<img src="http://i.imgur.com/mrpdz5W.png" style="max-width: 70px;"/>
+			<h1>   RADLIBS</h1>
+		</div>
 	</header>
 
 	<div id='container'>
