fixed login button on sign up section to expand below fixed height

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -123,7 +123,7 @@ $box-width: 90%;
 
 .start {
 	overflow: hidden;
-	height: 555px;
+	min-height: 555px;
 	padding: 40px;
 	transition: background ease 1s;
 	@include grid(10);
