added backup input border for box-shadow on inputs to show up on iOS in global and colors

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -9,6 +9,8 @@ $pink: #FF0060;
 $ltpink: #FA448A;
 $black: #000000;
 
+$ltgrey: #E6E6E6;
+
 $tblue: rgba(0, 108, 176, 0.5);
 $tgreen: rgba(0, 196, 31, 0.5);
 $tyellow: rgba(251, 251, 0, 0.5);
